--- a/src/main/webapp/WEB-INF/css/bookView.css
+++ b/src/main/webapp/WEB-INF/css/bookView.css
@@ -352,13 +352,27 @@
 }
 
 .review-author img{
-   	width: 20px;
+   	width: 28px;
    	hiegth: 12px;
+   	margin-right: 5px;
 }
 
+.review_delete_button{
+    background-color: transparent;
+}
 
+.review-author .star-rating .star{
+	font-size: 15px;
+}
 
-
+.review-author .star-rating{
+	display: inline-block;
+    font-size: 0rem;
+    position: relative;
+    margin-top: 0px;
+    margin-left: auto;
+    margin-bottom: 0px;
+}
 
 
 @media(max-width: 1015px){
@@ -447,7 +461,7 @@
 		font-size: 50px;
 	}
 	.review-author img{
-    	width: 45px;
+    	width: 63px;
 	}
 	.review-content {
 		font-size: 40px;
@@ -462,6 +476,14 @@
 		width: 50px;
 	    height: 50px;
 	}
-	
+	.review-author .star-rating .star {
+	    font-size: 32px;
+	}
+	.review-author .star-rating {
+		margin-left: 30px;
+	}
+	.review_delete_button{
+		font-size: 40px;
+	}
 }
 
