반응형 css 최종 수정 -강민

--- a/src/main/webapp/WEB-INF/css/bookList.css
+++ b/src/main/webapp/WEB-INF/css/bookList.css
@@ -186,8 +186,8 @@
 	}	
 }
 @media(max-width: 1015px){
-	img{
-		vertical-align: baseline;
+	img {
+	    vertical-align: baseline !important; /* 강제로 baseline으로 설정 */
 	}
 	
 	.book_image img{
