반응형 css 최최종 수정 -강민

--- a/src/main/webapp/WEB-INF/css/bookList.css
+++ b/src/main/webapp/WEB-INF/css/bookList.css
@@ -1,5 +1,12 @@
 @charset "UTF-8";
 
+img, svg{
+    vertical-align: baseline !important; /* 강제로 baseline으로 설정 */
+}
+img{
+    vertical-align: baseline !important; /* 강제로 baseline으로 설정 */
+}
+
 #book_div{
 	padding: 100px;
     justify-content: center;
