--- a/src/main/webapp/WEB-INF/css/index.css
+++ b/src/main/webapp/WEB-INF/css/index.css
@@ -8,9 +8,11 @@
 
 img, svg{
     vertical-align: baseline !important; /* 강제로 baseline으로 설정 */
+    display: inline-block;
 }
 img{
     vertical-align: baseline !important; /* 강제로 baseline으로 설정 */
+    display: inline-block;
 }
 
 * {
